# Teletron-SafetyEdit

./: .README.md.swp  .gitignore  README.md  makefile  pyproject.toml  requirements.txt  requirements_yfq.txt  tmp_run.sh
documents/: config_guide.md  context_parallel.md  distributed_encoder.md  safety_edit_distillation.md  tensor_parallel.md
documents/safety_edit/: SafetyEdit.pptx  datasets.md  teacher_pipeline.md  todo.md
examples/teleai/: convert_release.py  convert_release_with_lora.py  pretrain_i2v.py  pretrain_multimask.py  pretrain_s2v_recon.py  pretrain_s2v_recon_tae.py  pretrain_s2v_recon_tae_crss.py  pretrain_s2v_recon_tae_ds.py  pretrain_sr.py  pretrain_t2v.py  run_14_b.sh  run_1_3_b_v1.sh  run_1_3_b_v1_ada.sh  run_1_3_b_v1_crss.sh  run_1_3_b_v1_ds.sh
examples/teleai/config/: fl2v_1_3B.py  fl2v_pd_mse.py  safety_edit_sources_phase0.yaml  safety_edit_teacher_qwen.yaml  safety_edit_teacher_qwen_editor_stage.yaml  safety_edit_teacher_qwen_vlm_stage.yaml  safety_edit_teacher_static.yaml  teleai_i2v_multiresolution_14b.py  teleai_i2v_multiresolution_v1.py  teleai_i2v_multiresolution_v1_dynamic.py  teleai_i2v_multiresolution_v1_dynamic_ds.py  teleai_i2v_multiresolution_v1_tokens.py
examples/teleai/infer/: daily_check_14b.py  daily_check_1_3b_v1.py  daily_check_1_3b_v1_canny.py  daily_check_1_3b_v1_canny_lowresolution.py  daily_check_1_3b_v1_canny_lowresolution.py.bkup  daily_check_1_3b_v1_canny_lowresolution_sr.py  extract_latents_for_vqgan.py  zxl_infer_new_codebook_BF16.py
examples/teleai/infer/keyframes/: keyframe_decoder.py  keyframe_encoder.py
examples/teleai/infer/pipelines/: __init__.py  pipeline_i2v.py  pipeline_i2v.py.bkup  pipeline_i2v_BF16.py
examples/teleai/infer/prompts/: HardPrompt.py  flf2vPrompt.py  i2v150Prompt.py  i2v150Prompt_hardcase.py  recon_prompt.py
examples/teleai/infer/utils/: pipeline_pose.py  profile_utils.py  utils.py  video_transforms.py  wan_video_vae.py
examples/wan/: pretrain_causalwan.py  pretrain_wan.py  pretrain_wan2_2.py  run_causal.sh  run_wan.sh  run_wan2_2.sh
examples/wan/config/: prone10_lowerlr.py  wan_cpu.py  wan_flf.py  wan_i2v_multimask.py
metrics/: 77_frames.txt  all_frames.txt  psnr.py  yuv_psnr.py
metrics/fvd/: check_one.py  check_psnr.py  daily_check.py  daily_check_v1.py  demo.py  quantization.py
metrics/fvd/lpips/: lpips.py
metrics/lpips/: cal_test.py  calculate_fvd.py  calculate_lpips.py  calculate_psnr.py  calculate_ssim.py  daily_check.py  daily_check_v1.py  demo.py  quantization.py  score.py
teletron/: __init__.py
teletron/core/: __init__.py  parallel_state.py
teletron/core/context_parallel/: context_parallel_mixin.py  context_parallel_model.py  layers.py  mappings.py
teletron/core/distributed/: base_encoder.py  distributed_data_parallel.py  distributed_encoder.py  param_and_grad_buffer.py
teletron/core/pipeline_parallel_gan/: __init__.py  schedules_gan.py  schedules_pd.py
teletron/core/tensor_parallel/: __init__.py  layers.py  mappings.py  tensor_parallel_mixin.py
teletron/core/transformer/: transformer_block.py
teletron/datasets/: base_dataset.py  build.py  clip_dataset.py  clip_dataset_easy.py  dataset.py  fake_dataset.py  safety_edit_dataset.py  variable_dataset.py
teletron/datasets/collators/: default_collator.py
teletron/datasets/samplers/: __init__.py  bucket_sampler.py  build.py  default_sampler.py
teletron/datasets/transform/: __init__.py  build.py  clip_transform.py  formatting.py  prompt_transform.py  text_encoder.py  video_transform.py
teletron/datasets/utils/: __init__.py
teletron/models/: build.py  encoder_registry.py  flow_match.py  registry.py
teletron/models/causwan/: __init__.py  base.py  diffusion.py  wan_wrapper.py
teletron/models/causwan/modules/: attention.py  causal_fps_model.py  causal_model.py
teletron/models/hunyuan/: model.py  parallel_model.py
teletron/models/teleai/: __init__.py  keyframe_utils.py  parallel_teleai_model.py  taehv.py  teleai_encoder.py  teleai_encoder_utils.py  teleai_model.py
teletron/models/teleai/schedulers/: __init__.py
teletron/models/wan/: parallel_wan_model.py  wan_model.py
teletron/models/wan/encoder/: __init__.py  (+6 more)
teletron/safety_edit/: __init__.py  build_dataset.py
teletron/safety_edit/source_data/: __init__.py  prepare.py
teletron/safety_edit/teacher_pipeline/: __init__.py  adapters.py  loader.py  pipeline.py  qwen_adapters.py  run.py  schemas.py  writer.py
teletron/train/: __init__.py  arguments.py  consumer_dataloader.py  dataloader.py  gan_trainer.py  lr_scheduler.py  pd_trainer.py  telelogger.py  trainer.py  utils.py
teletron/train/checkpoint/: __init__.py  checkpoint.py  ema.py  utils.py
teletron/utils/: __init__.py  aux_func.py  config.py  global_vars.py  tokenizer.py
tests/unit_tests/: test_utils.py
tests/unit_tests/models/: test_parallel_teleai_model.py  test_tensor_parallel_teleai_model.py
tests/unit_tests/safety_edit/: test_teacher_pipeline.py
(+11 files in other folders)
