[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teletron"
version = "0.1.0"
description = "To pioneer training long-context multi-modal transformer models"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{name = "TeleAI-Infra Team"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["transformer", "multimodal", "long-context", "machine learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "megatron-core>=0.6.0",
    "setuptools==78.1.0",
    "yunchang==0.6.0",
    "numpy==1.26.4",
    "omegaconf",
    "huggingface_hub==0.27.0",
    "datasets",
    "safetensors==0.4.5",
    "einops==0.8.0",
    "transformers==4.47.1",
    "ftfy==6.3.1",
    "controlnet_aux==0.0.9",
    "pynvml==12.0.0",
    "paramiko==3.5.0",
    "lmdb==1.5.1",
    "decord==0.6.0",
    "pandas==2.2.3",
    "moviepy==2.1.1",
    "sentencepiece==0.2.0",
    "diffusers>=0.33.1",
    "matplotlib==3.10.0",
    "tensorboard==2.18.0",
    "loguru==0.7.3",
    "fvcore~=0.1.5",
    "attrs==24.2.0",
    "easydict==1.13",
    "cattrs==24.1.3",
    "func_timeout==4.3.5",
]

[project.urls]
Homepage = "https://github.com/Tele-AI/TeleTron.git"
Repository = "https://github.com/Tele-AI/TeleTron.git"
Issues = "https://github.com/Tele-AI/TeleTron/issues"

[tool.setuptools]
packages = {find = {include = ["teletron*"]}}
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
teletron = ["**/*.yml", "**/*.sh"]

[tool.uv]
link-mode = "copy" 

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["teletron", "tests"]
